# aMazeIng

./: Makefile  README.md  a_maze_ing.py  config.txt  main.py  maze_generate.py  output.txt  output_file.py  parser.py  printMaze.py  pyproject.toml  test.py  write_outputpy
mazegen/: __init__.py  generator.py
