[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator module"
requires-python = ">=3.10"
readme = "README.md"
[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]